--- a/ResCheker/ResCheker.csproj
+++ b/ResCheker/ResCheker.csproj
@@ -4,6 +4,12 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net5.0-windows</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MetroModernUI" Version="1.4.0" />
+    <PackageReference Include="System.Management" Version="6.0.0" />
+  </ItemGroup>
 
 </Project>
